Fix Treasury refresh

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -183,7 +183,7 @@
         <div class="modal-content govt-modal-content">
             <div class="modal-header">
                 <span class="modal-source">US TREASURY YIELDS</span>
-                <span id="govt-date" class="govt-date"></span>
+                <button id="govt-refresh-btn" class="govt-refresh-btn" title="Refresh treasury rates">⟳</button>
                 <button id="govt-modal-close" class="modal-close">&times;</button>
             </div>
             <div id="govt-loading" class="ratios-loading">Loading treasury rates...</div>
