--- a/frontend/index.html
+++ b/frontend/index.html
@@ -287,6 +287,30 @@
         </div>
     </div>
 
-    <script src="app.js?v=4"></script>
+    <div id="commodity-chart-modal" class="modal hidden">
+        <div class="modal-overlay"></div>
+        <div class="modal-content commodity-chart-modal-content">
+            <div class="modal-header">
+                <span id="commodity-chart-title" class="modal-source">COMMODITY CHART</span>
+                <div class="chart-controls">
+                    <button class="chart-btn" data-days="1">1D</button>
+                    <button class="chart-btn" data-days="5">5D</button>
+                    <button class="chart-btn active" data-days="30">1M</button>
+                    <button class="chart-btn" data-days="90">3M</button>
+                    <button class="chart-btn" data-days="180">6M</button>
+                    <button class="chart-btn" data-days="365">1Y</button>
+                    <button class="chart-btn" data-days="730">2Y</button>
+                    <button class="chart-btn" data-days="1095">3Y</button>
+                    <button class="chart-btn" data-days="1825">5Y</button>
+                    <button class="chart-btn" data-days="3650">10Y</button>
+                </div>
+                <button id="commodity-chart-modal-close" class="modal-close">&times;</button>
+            </div>
+            <div id="commodity-chart-loading" class="ratios-loading">Loading chart...</div>
+            <div id="commodity-chart-container"></div>
+        </div>
+    </div>
+
+    <script src="app.js?v=5"></script>
 </body>
 </html>
