Added 10 year and 30 year internationl bonds

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fin Terminal</title>
     <script src="https://cdn.jsdelivr.net/npm/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=5">
 </head>
 <body>
     <div id="app">
@@ -247,7 +247,7 @@
         <div class="modal-overlay"></div>
         <div class="modal-content bonds-modal-content">
             <div class="modal-header">
-                <span class="modal-source">INTERNATIONAL GOVERNMENT BONDS (10Y)</span>
+                <span class="modal-source">INTERNATIONAL GOVERNMENT BONDS</span>
                 <span id="bonds-date" class="govt-date"></span>
                 <button id="bonds-modal-close" class="modal-close">&times;</button>
             </div>
@@ -311,6 +311,6 @@
         </div>
     </div>
 
-    <script src="app.js?v=5"></script>
+    <script src="app.js?v=6"></script>
 </body>
 </html>
