Add statement currency metadata and USD toggle

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -197,7 +197,13 @@
                 </div>
                 <button id="statements-modal-close" class="modal-close">&times;</button>
             </div>
+            <div id="statements-currency-subtitle" class="statements-currency-subtitle"></div>
             <div id="statements-loading" class="ratios-loading">Loading statements...</div>
+            <div id="statements-currency-meta" class="statements-currency-meta hidden">
+                <span id="statements-currency-note" class="statements-currency-note"></span>
+                <button id="statements-currency-toggle" class="statements-currency-toggle" type="button"></button>
+                <div id="statements-currency-rate" class="statements-currency-rate hidden"></div>
+            </div>
             <div id="statements-body" class="statements-body"></div>
         </div>
     </div>
